feat: create dashboard process
